force-app/main/default/objects/Employee__c/fields/DateofJoining__c.field-meta.xml
<CustomField>
    <fullName>DateofJoining__c</fullName>
    <label>Date of Joining</label>
    <type>Date</type>
</CustomField>