force-app/main/default/objects/Employee__c/fields/IdentityProof__c.field-meta.xml
<CustomField>
    <fullName>IdentityProof__c</fullName>
    <inlineHelpText>Aadhar/Passport/PAN/Driving License</inlineHelpText>
    <label>Identity Proof</label>
    <length>100</length>
    <type>Text</type>
</CustomField>