force-app/main/default/objects/Employee__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <inlineHelpText>Permanent Address of Employee</inlineHelpText>
    <label>Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>