force-app/main/default/objects/Employee__c/fields/ReportsTo__c.field-meta.xml
<CustomField>
    <fullName>ReportsTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>