force-app/main/default/objects/Employee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Designation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Trip In Progress</fullName>
            </value>
            <value>
                <fullName>Day Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>