force-app/main/default/objects/Employee__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <formula>(TODAY() -  DateofJoining__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>