force-app/main/default/objects/Employee__c/fields/TotalTrips__c.field-meta.xml
<CustomField>
    <fullName>TotalTrips__c</fullName>
    <label>Total Trips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>