force-app/main/default/objects/Employee__c/recordTypes/Booking_Executive.recordType-meta.xml
<RecordType>
    <fullName>Booking_Executive</fullName>
    <active>true</active>
    <label>Booking Executive</label>
</RecordType>