force-app/main/default/objects/Employee__c/recordTypes/Driver.recordType-meta.xml
<RecordType>
    <fullName>Driver</fullName>
    <active>true</active>
    <label>Driver</label>
</RecordType>