force-app/main/default/objects/Employee__c/listViews/Booking_Executive_List.listView-meta.xml
<ListView>
    <fullName>Booking_Executive_List</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>Mobile__c</columns>
    <columns>ReportsTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employee__c.Booking_Executive</value>
    </filters>
    <label>Booking Executive List</label>
</ListView>