force-app/main/default/objects/Employee__c/listViews/Driver_List.listView-meta.xml
<ListView>
    <fullName>Driver_List</fullName>
    <columns>NAME</columns>
    <columns>DateofJoining__c</columns>
    <columns>FirstName__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>ReportsTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employee__c.Driver</value>
    </filters>
    <label>Driver List</label>
</ListView>